# heim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: checks.yml  security.yml
crates/heim-approvals/: Cargo.toml
crates/heim-approvals/src/: lib.rs
crates/heim-audit/: Cargo.toml
crates/heim-audit/src/: lib.rs
crates/heim-cli/: Cargo.toml
crates/heim-cli/src/: lib.rs  main.rs
crates/heim-cli/tests/: exec.rs
crates/heim-config/: Cargo.toml
crates/heim-config/src/: lib.rs
crates/heim-core/: Cargo.toml
crates/heim-core/src/: approval.rs  command.rs  grant.rs  lib.rs  requester.rs
crates/heim-exec/: Cargo.toml
crates/heim-exec/src/: lib.rs
crates/heim-policy/: Cargo.toml
crates/heim-policy/src/: lib.rs
crates/heim-providers/: Cargo.toml
crates/heim-providers/src/: lib.rs
crates/heim-sources/: Cargo.toml
crates/heim-sources/src/: lib.rs
crates/heimd/: Cargo.toml
crates/heimd/src/: lib.rs  main.rs
crates/heimd/tests/: doctor.rs
docs/: README.md  approvals.md  audit.md  config.md  daemon.md  policy.md
examples/: README.md  auth.example.json  config.toml  policy.toml  policy.yaml
examples/policies/: approvals.toml  aws.toml  github.toml
