[workspace]
members = [
    "crates/heim-approvals",
    "crates/heim-audit",
    "crates/heim-cli",
    "crates/heim-config",
    "crates/heim-core",
    "crates/heim-exec",
    "crates/heim-policy",
    "crates/heim-providers",
    "crates/heim-sources",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jychp/heim"
rust-version = "1.95"

[workspace.dependencies]
heim-approvals = { path = "crates/heim-approvals" }
heim-audit = { path = "crates/heim-audit" }
heim-config = { path = "crates/heim-config" }
heim-core = { path = "crates/heim-core" }
heim-exec = { path = "crates/heim-exec" }
heim-policy = { path = "crates/heim-policy" }
heim-providers = { path = "crates/heim-providers" }
heim-sources = { path = "crates/heim-sources" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
