[package]
name = "heim-audit"
description = "Audit crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-config = { version = "0.1.0", path = "../heim-config" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
