[package]
name = "heim-cli"
description = "Command-line interface crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
heim-config = { version = "0.1.0", path = "../heim-config" }
heim-policy = { version = "0.1.0", path = "../heim-policy" }

[[bin]]
name = "heim"
path = "src/main.rs"

[lints]
workspace = true
