[package]
name = "heim-cli"
description = "Command-line interface crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
heim-config = { version = "0.1.0", path = "../heim-config" }
heim-exec = { version = "0.1.0", path = "../heim-exec" }
heim-policy = { version = "0.1.0", path = "../heim-policy" }
sysinfo = { version = "0.39.2", default-features = false, features = ["system"] }

[[bin]]
name = "heim"
path = "src/main.rs"

[lints]
workspace = true
