[package]
name = "heim-cli"
description = "Command-line interface crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
heim-approvals = { version = "0.1.0", path = "../heim-approvals" }
heim-audit = { version = "0.1.0", path = "../heim-audit" }
heim-config = { version = "0.1.0", path = "../heim-config" }
heim-core = { version = "0.1.0", path = "../heim-core" }
heimd = { version = "0.1.0", path = "../heimd" }
heim-exec = { version = "0.1.0", path = "../heim-exec" }
heim-policy = { version = "0.1.0", path = "../heim-policy" }
heim-providers = { version = "0.1.0", path = "../heim-providers" }
heim-sources = { version = "0.1.0", path = "../heim-sources" }
serde_json.workspace = true
sysinfo = { version = "0.39.2", default-features = false, features = ["system"] }

[[bin]]
name = "heim"
path = "src/main.rs"

[lints]
workspace = true
