[package]
name = "heim-config"
description = "Configuration crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-core = { version = "0.1.0", path = "../heim-core" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[lints]
workspace = true
