[package]
name = "heim-config"
description = "Configuration crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-approvals = { version = "0.1.0", path = "../heim-approvals" }
heim-core = { version = "0.1.0", path = "../heim-core" }
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"

[lints]
workspace = true
