[package]
name = "heim-exec"
description = "Process execution crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-core = { workspace = true }
heim-policy = { workspace = true }

[lints]
workspace = true
