[package]
name = "heim-exec"
description = "Process execution crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-core = { version = "0.1.0", path = "../heim-core" }
heim-policy = { version = "0.1.0", path = "../heim-policy" }

[lints]
workspace = true
