[package]
name = "heim-policy"
description = "Policy crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-core = { version = "0.1.0", path = "../heim-core" }

[lints]
workspace = true
