[package]
name = "heim-providers"
description = "Credential provider crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-sources = { version = "0.1.0", path = "../heim-sources" }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }

[lints]
workspace = true
