[package]
name = "heim-providers"
description = "Credential provider crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { version = "1.8.17", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-sts = { version = "1.104.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
heim-sources = { version = "0.1.0", path = "../heim-sources" }
jsonwebtoken = "10.4.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
tokio = { version = "1.52.3", features = ["rt"] }

[lints]
workspace = true
