[package]
name = "heim-sources"
description = "Secret source crate for Heim."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heim-config = { version = "0.1.0", path = "../heim-config" }

[lints]
workspace = true
